# snaek

./: .gitignore  Cargo.toml  build.rs  todo.md
helper/: apply_colormap.py  color_space.py  colors_deep_seed.txt  colors_shallow_seed.txt  gen_terrain_colors_bin.py  generate_fertility.py  generate_rivers.py  spaced_deep_seed.txt  spaced_shallow_seed.txt  transformed_image_process.ipynb
into_color/: Cargo.toml
into_color/src/: lib.rs
src/: draw.rs  global.rs  main.rs  text.rs
src/classic/: logic.rs
src/helper/: color_picker.py  color_space.py  color_space_visualizer.py  colors.txt  spaced.txt  spaces.txt  transformed_image_process.ipynb
src/logic/: text.rs
src/snaek/: art.rs  draw.rs  levels.rs  logic.rs  mod.rs  scoreboard.rs  types.rs
src/snaek/draw/: draw_piston.rs  draw_sdl2.rs  mod.rs
src/snaek/levels/: lakes.rs  mod.rs  volcano.rs
