[package]
name = "snaek"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
image = "0.23.14"
into_color = { path = "into_color" }

[dependencies]
into_color = { path = "into_color" }
piston_window = "*"
sdl2 = "*"
rand = "*"
once_cell = "*"
hex = "*"
scoped_threadpool = "0.1.*"
